--- a/app/design/frontend/base/default/layout/downloadable.xml
+++ b/app/design/frontend/base/default/layout/downloadable.xml
@@ -15,7 +15,7 @@
 
     <customer_account>
         <reference name="customer_account_navigation">
-            <action method="addLink" translate="label" module="downloadable"><name>downloadable_products</name><path>downloadable/customer/products</path><label>My Downloadable Products</label></action>
+            <action method="addDownloadableProductsLink"/>
         </reference>
     </customer_account>
 
