--- a/app/design/frontend/base/default/template/sales/order/history.phtml
+++ b/app/design/frontend/base/default/template/sales/order/history.phtml
@@ -9,7 +9,7 @@
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/** @var Mage_Sales_Block_Order_History|Mage_Sales_Block_Reorder_Sidebar $this */
+/** @var Mage_Sales_Block_Order_History $this */
 ?>
 <?= $this->getMessagesBlock()->toHtml() ?>
 <?php $_orders = $this->getOrders(); ?>
