Remove redundant My Account menu from System menu
The My Account functionality is already accessible via the user icon
in the admin header, making the sidebar menu entry redundant.

- Remove My Account menu item from System > My Account
- Update user icon tooltip from "Logged in as %s" to "My Account"
- Remove unused translation string

--- a/app/design/adminhtml/default/default/template/page/header.phtml
+++ b/app/design/adminhtml/default/default/template/page/header.phtml
@@ -66,7 +66,7 @@
         </fieldset>
         <?php endif ?>
         <div class="user-menu-icons">
-            <a href="<?= Mage::helper("adminhtml")->getUrl("adminhtml/system_account") ?>" class="user-icon" title="<?= $this->__("Logged in as %s", $this->escapeHtml($this->getUser()->getUsername())) ?>">
+            <a href="<?= Mage::helper("adminhtml")->getUrl("adminhtml/system_account") ?>" class="user-icon" title="<?= $this->__("My Account") ?>">
                 <?= $this->getIconSvg('user') ?>
             </a>
             <a href="<?= $this->getLogoutLink() ?>" class="logout-icon" title="<?= $this->__('Log Out') ?>">
