--- a/app/design/frontend/base/default/template/bundle/sales/order/items/renderer.phtml
+++ b/app/design/frontend/base/default/template/bundle/sales/order/items/renderer.phtml
@@ -356,7 +356,20 @@
         <?php endif ?>
         <?= $this->escapeHtml($_item->getDescription()) ?>
         <?php if($this->canDisplayGiftmessage()): ?>
-            <a href="#" id="order-item-gift-message-link-<?= $parentItem->getId() ?>" class="gift-message-link" onclick="return giftMessageToogle('<?= $parentItem->getId() ?>')"><?= Mage::helper('sales')->__('Gift Message') ?></a>
+            <?php $_giftMessage = $this->helper('giftmessage/message')->getGiftMessageForEntity($parentItem); ?>
+            <details class="gift-message">
+                <summary class="toggle">
+                    <?= $this->getIconSvg('gift') ?>
+                    <?= Mage::helper('sales')->__('Gift Message') ?>
+                </summary>
+                <div class="content">
+                    <div class="header">
+                        <span><strong><?= $this->__('From:') ?></strong> <?= $this->escapeHtml($_giftMessage->getSender()) ?></span>
+                        <span><strong><?= $this->__('To:') ?></strong> <?= $this->escapeHtml($_giftMessage->getRecipient()) ?></span>
+                    </div>
+                    <blockquote class="text"><?= $this->helper('giftmessage/message')->getEscapedGiftMessage($parentItem) ?></blockquote>
+                </div>
+            </details>
         <?php endif ?>
     </td>
     <td data-rwd-label="SKU">&nbsp;</td>
