--- a/app/design/frontend/base/default/template/maho/giftcard/catalog/product/view/type/giftcard.phtml
+++ b/app/design/frontend/base/default/template/maho/giftcard/catalog/product/view/type/giftcard.phtml
@@ -1,5 +1,14 @@
 <?php
 /**
+ * Maho
+ *
+ * @category   design
+ * @package    base_default
+ * @copyright  Copyright (c) 2025-2026 Maho (https://mahocommerce.com)
+ * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
+ */
+
+/**
  * @var $this Maho_Giftcard_Block_Catalog_Product_View_Type_Giftcard
  */
 $product = $this->getProduct();
