--- a/app/design/frontend/base/default/template/maho/giftcard/checkout/payment/methods.phtml
+++ b/app/design/frontend/base/default/template/maho/giftcard/checkout/payment/methods.phtml
@@ -1,5 +1,14 @@
 <?php
 /**
+ * Maho
+ *
+ * @category   design
+ * @package    base_default
+ * @copyright  Copyright (c) 2025-2026 Maho (https://mahocommerce.com)
+ * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
+ */
+
+/**
  * Gift Card payment methods handler
  * This template handles payment method display when gift cards are applied
  */
