--- a/app/design/frontend/base/default/layout/giftcard.xml
+++ b/app/design/frontend/base/default/layout/giftcard.xml
@@ -28,14 +28,14 @@
     <!-- Gift Card Product View -->
     <PRODUCT_TYPE_giftcard>
         <reference name="product.info">
-            <block type="giftcard/catalog_product_view_type_giftcard" name="product.info.giftcard" as="product_type_data" template="maho/giftcard/catalog/product/view/type/giftcard.phtml">
-                <action method="setTemplate"><template>maho/giftcard/catalog/product/view/type/giftcard.phtml</template></action>
+            <block type="giftcard/catalog_product_view_type_giftcard" name="product.info.giftcard" as="product_type_data" template="catalog/product/view/type/default.phtml">
+                <block type="core/text_list" name="product.info.giftcard.extra" as="product_type_data_extra" translate="label">
+                    <label>Product Extra Info</label>
+                </block>
             </block>
         </reference>
-
-        <!-- Add gift card options to container2 for add to cart section -->
-        <reference name="product.info.container2">
-            <action method="append"><block>product.info.giftcard</block></action>
+        <reference name="product.info.options.wrapper">
+            <block type="giftcard/catalog_product_view_type_giftcard" name="product.info.options.giftcard" as="options_giftcard" before="-" template="maho/giftcard/catalog/product/view/type/options/giftcard.phtml" />
         </reference>
     </PRODUCT_TYPE_giftcard>
 </layout>
