--- a/app/design/frontend/base/default/template/maho/giftcard/checkout/cart/giftcard.phtml
+++ b/app/design/frontend/base/default/template/maho/giftcard/checkout/cart/giftcard.phtml
@@ -8,11 +8,7 @@
  * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 
-/**
- * Gift Card form in shopping cart
- * @var $this Maho_Giftcard_Block_Checkout_Cart_Giftcard
- */
-
+/** @var Maho_Giftcard_Block_Checkout_Cart_Giftcard $this */
 $appliedCodes = $this->getAppliedGiftcardCodes();
 ?>
 
