--- a/app/design/frontend/base/default/template/maho/giftcard/catalog/product/view/type/options/giftcard.phtml
+++ b/app/design/frontend/base/default/template/maho/giftcard/catalog/product/view/type/options/giftcard.phtml
@@ -8,11 +8,7 @@
  * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 
-/**
- * Gift card options template - rendered inside the options wrapper
- *
- * @var $this Maho_Giftcard_Block_Catalog_Product_View_Type_Giftcard
- */
+/** @var Maho_Giftcard_Block_Catalog_Product_View_Type_Giftcard $this */
 $product = $this->getProduct();
 $type = $this->getGiftcardType();
 $amounts = $this->getGiftcardAmounts();
