--- a/app/design/frontend/base/default/template/maho/giftcard/checkout/payment/methods.phtml
+++ b/app/design/frontend/base/default/template/maho/giftcard/checkout/payment/methods.phtml
@@ -8,11 +8,7 @@
  * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 
-/**
- * Gift Card payment methods handler
- * This template handles payment method display when gift cards are applied
- */
-
+/** @var Mage_Core_Block_Template $this */
 $quote = Mage::getSingleton('checkout/session')->getQuote();
 $grandTotal = $quote->getGrandTotal();
 $giftcardAmount = $quote->getGiftcardAmount();
