Improve layered navigation UI and add price input filter mode
Active Filters section:
- Redesigned with tag/chip-based UI matching layered nav style
- Header with "Active Filters" title and "Clear All" link on same row
- Filter tags with label, value, and corner X remove button
- Subtle red hover effect on tags

Price filter input mode:
- Added new "Input fields (from - to)" option for price navigation
- Renders From/To input fields with currency symbol
- Small arrow button to apply filter
- Set as default price navigation mode
- Configurable in System > Config > Catalog > Layered Navigation

Other improvements:
- Hide filter attributes with only 1 option (not useful to filter)
- Updated swatch filter tags to match new design
- Added translations for new strings

--- a/app/design/frontend/base/default/template/catalog/layer/state.phtml
+++ b/app/design/frontend/base/default/template/catalog/layer/state.phtml
@@ -16,9 +16,7 @@ $_filters = $this->getActiveFilters();
 $_renderers = $this->getParentBlock()->getChild('state_renderers')->getSortedChildren();
 ?>
 <?php if(!empty($_filters)): ?>
-<div class="currently">
-    <p class="block-subtitle"><?= $this->__('Currently Shopping by:') ?></p>
-    <ol>
+<ul class="filter-tags">
     <?php foreach ($_filters as $_filter): ?>
         <?php
         $_rendered = false;
@@ -34,15 +32,14 @@ $_renderers = $this->getParentBlock()->getChild('state_renderers')->getSortedChi
 
         if (!$_rendered):
         ?>
-        <li>
-            <span class="label"><?= $this->__($_filter->getName()) ?>:</span>
-            <span class="value"><?= $this->stripTags($_filter->getLabel()) ?></span>
-            <a href="<?= $_filter->getRemoveUrl() ?>" title="<?= $this->quoteEscape($this->__('Remove This Item')) ?>">
+        <li class="filter-tag">
+            <a href="<?= $_filter->getRemoveUrl() ?>" class="filter-tag-link" title="<?= $this->quoteEscape($this->__('Remove filter: %s', $_filter->getLabel())) ?>">
+                <span class="filter-tag-label"><?= $this->__($_filter->getName()) ?></span>
+                <span class="filter-tag-value"><?= $this->stripTags($_filter->getLabel()) ?></span>
                 <?= $this->getIconSvg('x') ?>
             </a>
         </li>
         <?php endif ?>
     <?php endforeach ?>
-    </ol>
-</div>
+</ul>
 <?php endif ?>
