--- a/app/design/frontend/base/default/template/configurableswatches/catalog/layer/state/swatch.phtml
+++ b/app/design/frontend/base/default/template/configurableswatches/catalog/layer/state/swatch.phtml
@@ -22,16 +22,17 @@ $_swatchOuterHeight = $this->getSwatchOuterHeight();
 
 $_swatchUrl = $this->getSwatchUrl();
 ?>
-<li class="swatch-current">
-    <span class="label"><?= $this->__($_filter->getName()) ?>:</span>
-    <span class="value">
-        <span class="swatch-link" style="height:<?= $_swatchOuterHeight ?>px; width:<?= $_swatchOuterWidth ?>px;">
-            <span class="swatch-label" style="height:<?= $_swatchInnerHeight ?>px; width:<?= $_swatchInnerWidth ?>px; line-height:<?= $_swatchInnerHeight ?>px;">
-                <img src="<?= $_swatchUrl ?>" alt="<?= $_label ?>" title="<?= $_label ?>" width="<?= $_swatchInnerWidth ?>" height="<?= $_swatchInnerHeight ?>" />
+<li class="filter-tag filter-tag-swatch">
+    <a href="<?= $_filter->getRemoveUrl() ?>" class="filter-tag-link" title="<?= $this->quoteEscape($this->__('Remove filter: %s', $_label)) ?>">
+        <span class="filter-tag-label"><?= $this->__($_filter->getName()) ?></span>
+        <span class="filter-tag-value">
+            <span class="swatch-link" style="height:<?= $_swatchOuterHeight ?>px; width:<?= $_swatchOuterWidth ?>px;">
+                <span class="swatch-label" style="height:<?= $_swatchInnerHeight ?>px; width:<?= $_swatchInnerWidth ?>px; line-height:<?= $_swatchInnerHeight ?>px;">
+                    <img src="<?= $_swatchUrl ?>" alt="<?= $_label ?>" title="<?= $_label ?>" width="<?= $_swatchInnerWidth ?>" height="<?= $_swatchInnerHeight ?>" />
+                </span>
             </span>
+            <?= $_label ?>
         </span>
-    </span>
-    <a href="<?= $_filter->getRemoveUrl() ?>" title="<?= $this->quoteEscape($this->__('Remove This Item')) ?>">
         <?= $this->getIconSvg('x') ?>
     </a>
 </li>
