--- a/app/design/install/default/default/template/install/config.phtml
+++ b/app/design/install/default/default/template/install/config.phtml
@@ -18,7 +18,7 @@
 <div class="messages">
     <?= $this->getMessagesBlock()->toHtml() ?>
 </div>
-<?php if($this->getInstaller()->getServerCheckStatus()): ?>
+<?php if ($this->getInstaller()->getServerCheckStatus()): ?>
 <form action="<?= $this->getPostUrl() ?>" method="post" id="form-validate">
 <?= $this->getLayout()->getBlock('database')->toHtml() ?>
 
@@ -27,33 +27,33 @@
     <ul>
         <li>
             <label for="base_url"><?= $this->__('Base URL') ?> <span class="required">*</span></label>
-            <input type="text" name="config[unsecure_base_url]" id="base_url" value="<?= $this->getFormData()->getUnsecureBaseUrl() ?>" title="<?= $this->quoteEscape($this->__('Base URL')) ?>" class="required-entry validate-url input-text" />
+            <input type="url" name="config[unsecure_base_url]" id="base_url" value="<?= $this->getFormData()->getUnsecureBaseUrl() ?>" title="<?= $this->quoteEscape($this->__('Base URL')) ?>" class="validate-url input-text" required>
         </li>
         <li>
             <label for="admin_frontname"><?= $this->__('Admin Path') ?> <span class="required">*</span></label>
-            <input type="text" name="config[admin_frontname]" id="admin_frontname" value="<?= $this->getFormData()->getAdminFrontname() ?>" title="<?= $this->quoteEscape($this->__('Admin Path')) ?>" class="required-entry validate-data input-text" />
+            <input type="text" name="config[admin_frontname]" id="admin_frontname" value="<?= $this->getFormData()->getAdminFrontname() ?>" title="<?= $this->quoteEscape($this->__('Admin Path')) ?>" class="validate-data input-text" required>
             <p class="field-note">
                 <small><?= $this->__('Additional path added after Base URL to access your Administrative Panel (e.g. admin, backend, control etc.).') ?></small>
             </p>
         </li>
         <li>
             <label for="use_secure" class="checkbox-label">
-                <input type="checkbox" name="config[use_secure]" id="use_secure" value="1" <?php if($this->getFormData()->getUseSecure()): ?>checked="checked"<?php endif ?> />
+                <input type="checkbox" name="config[use_secure]" id="use_secure" value="1" <?php if ($this->getFormData()->getUseSecure()): ?>checked<?php endif ?>>
                 <span><?= $this->__('Use Secure URLs (SSL)') ?></span>
             </label>
         </li>
     </ul>
-    <ul id="use_secure_options" class="<?php if(!$this->getFormData()->getUseSecure()): ?>hidden<?php endif ?>">
+    <ul id="use_secure_options" class="<?php if (!$this->getFormData()->getUseSecure()): ?>hidden<?php endif ?>">
         <li>
             <label for="secure_base_url"><?= $this->__('Secure Base URL') ?> <span class="required">*</span></label>
-            <input type="text" name="config[secure_base_url]" id="secure_base_url" value="<?= $this->getFormData()->getSecureBaseUrl() ?>" title="<?= $this->quoteEscape($this->__('Secure Base URL')) ?>" class="required-entry validate-url input-text" />
+            <input type="url" name="config[secure_base_url]" id="secure_base_url" value="<?= $this->getFormData()->getSecureBaseUrl() ?>" title="<?= $this->quoteEscape($this->__('Secure Base URL')) ?>" class="validate-url input-text" required>
             <p class="field-note">
                 <small><?= $this->__('Provide a complete base URL for SSL connection. For example: %s', '<strong>https://mydomain.com/maho/</strong>') ?></small>
             </p>
         </li>
         <li>
             <label for="use_secure_admin" class="checkbox-label">
-                <input type="checkbox" name="config[use_secure_admin]" id="use_secure_admin" value="1" <?php if($this->getFormData()->getUseSecureAdmin()): ?>checked="checked"<?php endif ?> />
+                <input type="checkbox" name="config[use_secure_admin]" id="use_secure_admin" value="1" <?php if ($this->getFormData()->getUseSecureAdmin()): ?>checked<?php endif ?>>
                 <span><?= $this->__('Run admin interface with SSL') ?></span>
             </label>
         </li>
@@ -84,9 +84,7 @@
     </div>
 </div>
 
-<script type="text/javascript">
-    var dataForm = new VarienForm('form-validate');
-
+<script>
     // Show installation overlay on form submit
     document.getElementById('form-validate').addEventListener('submit', function(e) {
         // Only show overlay if form is valid
