--- a/app/design/install/default/default/template/install/db/main.phtml
+++ b/app/design/install/default/default/template/install/db/main.phtml
@@ -23,10 +23,10 @@
         <?php $selectedEngine = $this->getFormData()->getDbEngine() ?: ($dbTypeOptions[0]->getIdPrefix() ?? ''); ?>
         <?php if (count($dbTypeOptions) > 0): ?>
             <li>
-                <label for="db_engine_select"><?= $this->__('Database Type') ?></label>
-                <select name="config[db_engine]" id="db_engine_select">
-                    <?php foreach($dbTypeOptions as $block): ?>
-                        <option value="<?= $block->getIdPrefix()?>" <?php if($selectedEngine == $block->getIdPrefix()):?>selected="selected"<?php endif ?>><?= $block->getTitle() ?></option>
+                <label for="db_engine_select"><?= $this->__('Database Type') ?> <span class="required">*</span></label>
+                <select name="config[db_engine]" id="db_engine_select" required>
+                    <?php foreach ($dbTypeOptions as $block): ?>
+                        <option value="<?= $block->getIdPrefix()?>" <?php if ($selectedEngine == $block->getIdPrefix()): ?>selected<?php endif ?>><?= $block->getTitle() ?></option>
                     <?php endforeach ?>
                 </select>
             </li>
@@ -34,7 +34,7 @@
 
         <?php foreach ($dbTypeOptions as $block): ?>
         <?php $block = $this->getDatabaseBlock($block->getIdPrefix()) ?>
-            <div id="<?= $block->getIdPrefix() ?>_conn_form" class="db-connection-form <?php if($selectedEngine != $block->getIdPrefix()):?>hidden<?php endif ?>" data-db-type="<?= $block->getIdPrefix() ?>">
+            <div id="<?= $block->getIdPrefix() ?>_conn_form" class="db-connection-form <?php if ($selectedEngine != $block->getIdPrefix()): ?>hidden<?php endif ?>" data-db-type="<?= $block->getIdPrefix() ?>">
                 <?= $block->toHtml() ?>
             </div>
         <?php endforeach ?>
@@ -42,19 +42,19 @@
 </div>
 
 <script>
-document.addEventListener('DOMContentLoaded', function() {
-    const dbSelector = document.getElementById('db_engine_select');
+    const dbSelector = document.querySelector('#db_engine_select');
+
+    dbSelector?.addEventListener('change', () => {
+        updateDbForms(dbSelector.value);
+    });
+
     if (dbSelector) {
-        dbSelector.addEventListener('change', function() {
-            const selectedType = this.value;
-            document.querySelectorAll('.db-connection-form').forEach(function(form) {
-                if (form.dataset.dbType === selectedType) {
-                    form.classList.remove('hidden');
-                } else {
-                    form.classList.add('hidden');
-                }
-            });
+        updateDbForms(dbSelector.value);
+    }
+
+    function updateDbForms(selectedType) {
+        document.querySelectorAll('.db-connection-form').forEach(form => {
+            form.classList.toggle('hidden', form.dataset.dbType !== selectedType);
         });
     }
-});
 </script>
