--- a/app/design/install/default/default/template/page.phtml
+++ b/app/design/install/default/default/template/page.phtml
@@ -16,12 +16,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><?= Mage::helper('install')->__('Maho Installation Wizard') ?></title>
-    <script type="text/javascript" src="<?= $this->getJsUrl() ?>validation.js"></script>
-    <script type="text/javascript" src="<?= $this->getJsUrl() ?>varien/js.js"></script>
-    <script type="text/javascript" src="<?= $this->getJsUrl() ?>varien/form.js"></script>
-    <?= Mage::helper('page')->getFaviconHtml() ?>
-    <link rel="stylesheet" href="<?= $this->getSkinUrl('css/installer.css') ?>" type="text/css" media="all"/>
+    <title><?= $this->helper('install')->__('Maho Installation Wizard') ?></title>
+    <?= $this->helper('page')->getFaviconHtml() ?>
+    <link rel="stylesheet" href="<?= $this->getSkinUrl('css/installer.css') ?>" type="text/css" media="all">
 </head>
 
 <body>
