--- a/app/design/install/default/default/template/install/db/mysql.phtml
+++ b/app/design/install/default/default/template/install/db/mysql.phtml
@@ -20,7 +20,7 @@
     <label for="host"><?= $this->__('Host') ?> <span class="required">*</span></label>
     <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_host]" id="host" value="<?= $this->getFormData()->getDbHost() ?>" title="<?= $this->quoteEscape($this->__('Database host')) ?>" class="input-text" required>
     <p class="field-note">
-        <small><?= $this->__('You can specify server port, ex.: localhost:3307<br>If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock') ?></small>
+        <?= $this->__('You can specify server port, ex.: localhost:3307<br>If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock') ?>
     </p>
 </li>
 <li>
@@ -39,6 +39,6 @@
     <label for="prefix"><?= $this->__('Tables Prefix') ?></label>
     <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_prefix]" id="prefix" value="<?= $this->getFormData()->getDbPrefix() ?>" title="<?= $this->quoteEscape($this->__('Tables Prefix')) ?>" class="input-text">
     <p class="field-note">
-        <small><?= $this->__('(Optional. Leave blank for no prefix)') ?></small>
+        <?= $this->__('(Optional. Leave blank for no prefix)') ?>
     </p>
 </li>
